nexus/nexus-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nexus
  namespace: kube-operator
  labels:
    app: nexus
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
      version: v1
  template:
    metadata:
      name: nexus
      labels:
        app: nexus
        version: v1
    spec:
      volumes:
        - name: nexus-pvc
          persistentVolumeClaim:
            claimName: nexus-data
          
      imagePullSecrets:           
        - name: harborsecret
      containers:
        - name: nexus
          image: sonatype/nexus3
          volumeMounts:
          - mountPath: /nexus-data
            name: nexus-pvc
          resources:               
            requests:
              cpu: 1
              memory: 1024Mi
            limits:
              cpu: 2
              memory: 2018Mi
          imagePullPolicy: IfNotPresent
          
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 120 
            timeoutSeconds: 3        
            periodSeconds: 30        
            successThreshold: 1      
            failureThreshold: 3     
          readinessProbe:            
            tcpSocket:
              port: 8081
            initialDelaySeconds: 120  
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1      
            failureThreshold: 3      
          securityContext:
            privileged: false    
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
