nexus/nexus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-web
  namespace: kube-operator
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - host: nexus.huaweicloud.com
    http:
      paths:
      - backend:
          serviceName: nexus-web
          servicePort: 8081
